Bump versions (java/gradle/javafx/dependencies)